[refs #105524] Main menu (navbar): Fix sub menu align.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
@@ -2551,7 +2551,7 @@ tbody.collapse.in {
     overflow: hidden;
     background-color: #e5e5e5; }
   .dropdown-menu > li > a {
-    display: block;
+    display: inline-block;
     padding: 3px 20px;
     clear: both;
     font-weight: normal;
